# intern-trial-day-assignment-mcp

./: .env.example  .gitignore  README.md  client_expectation.py  pyproject.toml  server_expectation.py  test_keycloak_connectivity.py
src/: client.py  exceptions.py  keycloak_models.py  server.py
test/: __init__.py  test_client.py
